# QPFeatureSelection

./: README.md  pyproject.toml
documentation/: BRIEF.md
mcode/: SolveOptProblem.m
notebooks/: qp_feature_selection_demo.ipynb
src/qp_feature_selection/: _linear.py  optimization.py
src/qp_feature_selection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
