[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qp-feature-selection"
version = "0.1.0"
description = "Python-native port of MATLAB QPFeatureSelection."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "QPFeatureSelection Port Contributors"}
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "pandas>=2.2",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "nbformat>=5.10",
]
notebook = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
